--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<li class='nav-header'>Project Details</li>
 				<li><a href="https://github.com/AliShujjat/DropOutRatesInPakistan">Github</a></li>
 				<li><a href="https://opendata.com.pk/dataset/determinants-and-reasons-behind-low-enrollment-or-school-dropouts-in-rural-areas-of-pakistan">Dataset</a></li>
+				<li><a href="https://drive.google.com/file/d/1EKVxRfDY40OYZUlvCu85xzJWEcYuJhIG/view?usp=sharing">Report</a></li>
 				<li><a href="about_us.html">The Team</a></li>
 			</ul>
 
